src/components/Contact.module.css
.contact {
    width: 100%;
    padding: 0 0 48px 0;
    /* background-color: #ffffff; */
    /* background-color: #000000; */
}

.container {
    max-width: 1200px;
    width: 100%;
    margin: 0 auto;
    padding: 0 24px;
    display: flex;
    flex-direction: column;
    gap: 24px;
}

.contentWrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 24px;
}

.image {
    width: 100%;
    height: auto;
}

.heading {
    font-family: var(--font-tenor-sans), sans-serif;
    font-size: 48px;
    font-weight: 500;
    line-height: 1.2;
    letter-spacing: -0.02em;
    color: black;
    /* color: #ffffff; */
    margin: 0;
}

.textBlock {
    /* padding-bottom: 24px; */
    /* border-bottom: 1px solid #666; */
    width: fit-content;
    max-width: 540px;
    /* display: flex; */
    flex-direction: column;
    justify-content: space-between;
    /* justify-content: flex-end; */
    padding: 24px 0 12px 0;
    min-height: 320px;
    display: flex;
    /* gap: 12px; */
    max-width: 420px;
}

.text {
    font-family: var(--font-onest), sans-serif;
    font-size: 16px;
    line-height: 1.5;
    color: black;
    text-align: justify;
    /* color: #666666; */
    /* color: #ffffff; */
    margin: 0;
}

/* .divider {
    width: 100%;
    height: 1px;
    background-color: #000000;
} */

.contacts {
    display: flex;
    flex-direction: column;
    gap: 12px;
    color: black;
    /* color: #666666; */
}

.author {
    font-family: var(--font-tenor-sans), sans-serif;
    text-transform: uppercase;
    font-size: 18px;
}

.contactItem {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.label {
    font-family: var(--font-tenor-sans), sans-serif;
    font-size: 18px;
    font-weight: 500;
    color: black;
    text-transform: capitalize;
    letter-spacing: 0.05em;
}

.value {
    font-family: var(--font-tenor-sans), sans-serif;
    /* font-family: var(--font-onest), sans-serif; */
    font-size: 18px;
    line-height: 1.6;
    color: black;
    text-transform: uppercase;
    /* color: #ffffff; */
    text-decoration: none;
    transition: color 0.3s ease;

}

/* .value:hover {
    color: #cccccc;
} */

/* Responsive Design */
@media (max-width: 768px) {
    .contact {
        padding: 80px 0;
    }

    .container {
        padding: 0 20px;
        gap: 32px;
    }

    .heading {
        font-size: 36px;
    }

    .text {
        font-size: 16px;
    }
}

@media (max-width: 480px) {
    .contact {
        padding: 48px 0 24px 0;
    }
    .contentWrapper {
        grid-template-columns: 1fr;
    }

    .image {
        max-width: 100%;
        height: auto;
    }

    .container {
        padding: 0 16px;
        gap: 24px;
    }

    .heading {
        font-size: 28px;
    }

    .textBlock {
        padding: 0;
        min-height: auto;
        gap: 24px;
    }

    .text {
        font-size: 15px;
    }

    .value {
        font-size: 16px;
    }
}

